[t3272] Fixed buttons cut off in chrome media gallery

--- a/css/media-editor.less
+++ b/css/media-editor.less
@@ -5,7 +5,7 @@
 .media-editor {
 
   @titleBarHeight: 60px;
-  @addClipHeight: 160px;
+  @addClipHeight: 165px;
   @durationInputHeight: 48px;
 
   .butter-editor-body {
@@ -72,7 +72,7 @@
   .media-gallery {
     position: absolute;
     bottom: @durationInputHeight;
-    top: @addClipHeight + 20px;
+    top: @addClipHeight + 15px;
     width: 100%;
     margin-top: -1px;
 
